Adjustments to the navbar to sort out alignment issues.

--- a/classes/module/swatch/lux_bootswatch.scss
+++ b/classes/module/swatch/lux_bootswatch.scss
@@ -186,3 +186,11 @@ th {
         color: inherit;
     }
 }
+
+
+// Moodle search.scss ==========================================================
+.search-input-wrapper > div {
+    .icon {
+        margin-top: 14px;
+    }
+}
